--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,7 +98,7 @@ jobs:
     - name: 📊 Upload security reports
       uses: actions/upload-artifact@v4
       with:
-        name: security-reports
+        name: security-reports-${{ github.run_id }}
         path: |
           bandit-report.json
           safety-report.json
@@ -139,7 +139,7 @@ jobs:
     - name: 📤 Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: build-artifacts
+        name: build-artifacts-${{ github.run_id }}
         path: build-artifacts.tar.gz
 
   # =============================================================================
@@ -188,7 +188,7 @@ jobs:
     - name: 📥 Download build artifacts
       uses: actions/download-artifact@v4
       with:
-        name: build-artifacts
+        name: build-artifacts-${{ github.run_id }}
         
     - name: 🔐 Render.com deployment
       run: |
@@ -223,7 +223,7 @@ jobs:
     - name: 📥 Download build artifacts
       uses: actions/download-artifact@v4
       with:
-        name: build-artifacts
+        name: build-artifacts-${{ github.run_id }}
         
     - name: 🔐 Render.com production deployment
       run: |
