--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
     - name: 📊 Upload coverage reports
       uses: actions/upload-artifact@v4
       with:
-        name: coverage-reports-basic
+        name: coverage-reports-basic-${{ matrix.python-version }}
         path: |
           htmlcov/
           coverage.xml
@@ -103,7 +103,7 @@ jobs:
     - name: 📊 Upload coverage reports
       uses: actions/upload-artifact@v4
       with:
-        name: coverage-reports-main
+        name: coverage-reports-main-${{ github.run_id }}
         path: coverage.xml
         retention-days: 30
 
@@ -136,7 +136,7 @@ jobs:
     - name: 📊 Upload coverage reports
       uses: actions/upload-artifact@v4
       with:
-        name: coverage-reports-models
+        name: coverage-reports-models-${{ github.run_id }}
         path: coverage.xml
         retention-days: 30
 
@@ -183,7 +183,7 @@ jobs:
     - name: 📊 Upload coverage reports
       uses: actions/upload-artifact@v4
       with:
-        name: coverage-reports-database
+        name: coverage-reports-database-${{ github.run_id }}
         path: coverage.xml
         retention-days: 30
 
@@ -261,7 +261,7 @@ jobs:
     - name: 📊 Upload security reports
       uses: actions/upload-artifact@v4
       with:
-        name: security-reports
+        name: security-reports-${{ github.run_id }}
         path: |
           bandit-report.json
           safety-report.json
@@ -387,7 +387,7 @@ jobs:
     - name: 📤 Upload final report
       uses: actions/upload-artifact@v4
       with:
-        name: ci-final-report
+        name: ci-final-report-${{ github.run_id }}
         path: ci-report.md
         retention-days: 30
         
