--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,10 @@ jobs:
   # 2. TEST SUITE & COVERAGE - MAIN
   # =============================================================================
   test-main:
+    env:
+      SUPABASE_URL: https://test.supabase.co
+      SUPABASE_ANON_KEY: test-anon-key-for-ci
+      SUPABASE_SERVICE_ROLE_KEY: test-service-role-key-for-ci
     name: Test Suite & Coverage (main)
     runs-on: ubuntu-latest
     
@@ -111,6 +115,10 @@ jobs:
   # 3. TEST SUITE & COVERAGE - MODELS
   # =============================================================================
   test-models:
+    env:
+      SUPABASE_URL: https://test.supabase.co
+      SUPABASE_ANON_KEY: test-anon-key-for-ci
+      SUPABASE_SERVICE_ROLE_KEY: test-service-role-key-for-ci
     name: Test Suite & Coverage (models)
     runs-on: ubuntu-latest
     
@@ -144,6 +152,10 @@ jobs:
   # 4. TEST SUITE & COVERAGE - DATABASE
   # =============================================================================
   test-database:
+    env:
+      SUPABASE_URL: https://test.supabase.co
+      SUPABASE_ANON_KEY: test-anon-key-for-ci
+      SUPABASE_SERVICE_ROLE_KEY: test-service-role-key-for-ci
     name: Test Suite & Coverage (database)
     runs-on: ubuntu-latest
     
@@ -281,6 +293,10 @@ jobs:
   # 7. INTEGRATION TESTS
   # =============================================================================
   integration-tests:
+    env:
+      SUPABASE_URL: https://test.supabase.co
+      SUPABASE_ANON_KEY: test-anon-key-for-ci
+      SUPABASE_SERVICE_ROLE_KEY: test-service-role-key-for-ci
     name: Integration Tests
     runs-on: ubuntu-latest
     needs: [test-basic, test-main, code-quality]
@@ -312,6 +328,10 @@ jobs:
   # 8. E2E TESTS
   # =============================================================================
   e2e-tests:
+    env:
+      SUPABASE_URL: https://test.supabase.co
+      SUPABASE_ANON_KEY: test-anon-key-for-ci
+      SUPABASE_SERVICE_ROLE_KEY: test-service-role-key-for-ci
     name: E2E Tests
     runs-on: ubuntu-latest
     needs: [integration-tests, security]
