--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,10 @@ jobs:
   # 1. CODE QUALITY & TESTING
   # =============================================================================
   quality:
+    env:
+      SUPABASE_URL: https://test.supabase.co
+      SUPABASE_ANON_KEY: test-anon-key-for-ci
+      SUPABASE_SERVICE_ROLE_KEY: test-service-role-key-for-ci
     name: 🔍 Code Quality & Testing
     runs-on: ubuntu-latest
     
@@ -70,6 +74,10 @@ jobs:
   # 2. SECURITY SCANNING
   # =============================================================================
   security:
+    env:
+      SUPABASE_URL: https://test.supabase.co
+      SUPABASE_ANON_KEY: test-anon-key-for-ci
+      SUPABASE_SERVICE_ROLE_KEY: test-service-role-key-for-ci
     name: 🔒 Security Scanning
     runs-on: ubuntu-latest
     needs: quality
