--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,10 @@ bcrypt>=4.0.0
 supabase>=2.0.0
 postgrest>=0.13.0
 
+# PDF Generation
+reportlab==4.0.7
+weasyprint==61.2
+
 # Development & Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
